--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -1,7 +1,9 @@
 project (utility)
 add_library(utility
 vec.cpp vec.h
-physics.cpp physics.h)
+physics.cpp physics.h
+        toggle.cpp
+        toggle.h)
 
 target_include_directories(utility PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-
+target_link_libraries(utility PUBLIC SDL3::SDL3)
