--- a/world/CMakeLists.txt
+++ b/world/CMakeLists.txt
@@ -5,7 +5,10 @@ world.cpp world.h
         tilemap.cpp
         tilemap.h
         camera.cpp
-        camera.h)
+        camera.h
+        gameobject.cpp
+        gameobject.h
+    )
 
 target_include_directories(world PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(world PUBLIC SDL3::SDL3 game_objects)
+target_link_libraries(world PUBLIC SDL3::SDL3 utility)
